--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/a_book_db?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://24SA31A016:WP78RslZh9ASDj35@cluster0.f2wo6gz.mongodb.net/db_24sa31a016?retryWrites=true&w=majority&appName=Cluster0 PORT=5000
 JWT_SECRET=secret_key_apa_aja_bebas
 NODE_ENV=production
